--- a/templates/formArticle.html.twig
+++ b/templates/formArticle.html.twig
@@ -29,8 +29,9 @@
             {{ form_errors(form.categories) }}
 
             {{ form_label(form.visible, 'Visible :') }}
-            {{ form_widget(form.visible, {'attr': {'required': true, 'class' : 'visible'}}) }}
+            {{ form_widget(form.visible, {'attr': {'required': false, 'class' : 'visible'}}) }}
             {{ form_errors(form.visible) }}
+
 
 
         {{ form_end(form) }}
