--- a/public/assets/css/owl.css
+++ b/public/assets/css/owl.css
@@ -1,67 +1,790 @@
 
-.categories label {
-    margin-right : 30px;
-    margin-left : 5px;
+
+/*      light colors         */
+html {
+    font-size: 14px;
+    -ms-text-size-adjust: 100%;
+    -webkit-text-size-adjust: 100%;
 }
 
-.articleText li{
-    list-style:none;
+body {
+    -moz-osx-font-smoothing: grayscale;
+    -webkit-font-smoothing: antialiased;
+    font-size: 100%;
+}
+@media (min-width: 58em) {
+    body {
+        font-size: 100%;
+    }
+}
+@media (min-width: 115em) {
+    body {
+        font-size: 110%;
+    }
+}
+@media (min-width: 125em) {
+    body {
+        font-size: 115%;
+    }
+}
+@media (min-width: 145em) {
+    body {
+        font-size: 120%;
+    }
+}
+@media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
+    body {
+        font-feature-settings: normal;
+        /* Internet Explorer fix */
+    }
 }
 
-.articleTrash {
-    padding : 5px;
-    background-color : brown;
-    color : white;
-    border-radius : 2px;
+h2 {
+    font-size: 40px;
 }
 
-.articleUpdate {
-    padding : 5px;
-    background-color : darkolivegreen;
-    color : white;
-    border-radius : 2px;
+h1,
+.h1,
+h2,
+.h2,
+h3,
+.h3,
+h4,
+.h4,
+h5,
+.h5,
+h6,
+.h6,
+.content-blog p {
+    -moz-osx-font-smoothing: grayscale;
+    -webkit-font-smoothing: antialiased;
+    font-family: "Poppins", "Times New Roman", serif;
+    color: #113441;
+
+}
+h1 a,
+.h1 a,
+h2 a,
+.h2 a,
+h3 a,
+.h3 a,
+h4 a,
+.h4 a,
+h5 a,
+.h5 a,
+h6 a,
+.h6 a,
+.content-blog p a {
+    font-size: inherit;
+    font-family: "Poppins", "Times New Roman", serif;
+    color: #113441;
+}
+
+.content-blog {
+    padding: 30px 0;
+}
+.content-blog p {
+    font-size: 18px;
+    margin-bottom: 30px;
+}
+
+h1, .h1 {
+    /*font-size: 3em;*/
+    font-size:70px;
+    line-height: 1.213483146em;
+    font-weight: bold;
+}
+
+h2, .h2 {
+    /*font-size: 2.4em;*/
+    font-size: 40px;
+    line-height: 1.25;
+    margin: 0.4em 0;
+    /*font-weight: bold;*/
+}
+
+h3, .h3 {
+    font-size: 1.61em;
+    line-height: 1.05em;
+    margin-top: 15px;
+    margin-bottom: 15px;
+}
+
+h4, .h4 {
+    font-size: 1.3em;
+    line-height: 1.714285714em;
+}
+
+h5 {
+    font-size: 1.2em;
+}
+
+p {
+    font-size: 18px;
+    /*font-size: 16px;*/
+    line-height: 1.6em;
+    font-weight: 300;
+    margin: 0 0 .75em;
+    color: #113441;
+}
+
+p,
+label,
+.btn,
+.form-control,
+.title h5,
+.navbar,
+.brand,
+.btn-simple,
+a,
+.td-name,
+td,
+small,
+.media h5,
+.subtitle {
+    font-family: "Poppins", "Helvetica Neue", Helvetica, Arial, sans-serif;
+}
+
+a {
+    color: #113441;
+    /*opacity: .7;*/
+    /*font-size: 14px;*/
+    font-size: 18px;
+    font-weight:300;
+
+}
+a:hover {
+    color: #FFFFFF;
+    /*opacity: 1;*/
+}
+
+.title {
+    text-align: center;
+    margin-bottom: 50px;
+}
+.title p {
+    color: #113441;
+}
+
+.section {
+    padding: 50px 0;
+    position: relative;
+    background-color: #FFFFFF;
+}
+
+.section {
+    position: relative;
+}
+
+.section .headSection {
+    padding: 20px 0;
+}
+
+.section-our-projects-fluid .row [class^="col-"] {
+    padding-left: 0;
+    padding-right: 0;
+}
+.section-our-projects-fluid .row [class^="col-"] .project {
+    margin-bottom: 0;
+}
+
+.section-our-projects .project {
+    margin-bottom: 30px;
+    /*min-height: 320px;*/
 
 }
 
-.commentTrash, .commentUpdate,  .commentVisibility.glyphicon-eye-open {
-    padding : 5px;
-    background-color : #333377;
-    color : white;
-    border-radius : 2px;
+.section-our-projects {
+    min-height: 448px;
+
+}
+
+.section-our-projects .project {
+    margin-bottom: 30px;
+    /*min-height: 320px;*/
+
+}
+
+.section .title-area {
+    /*max-width: 760px;*/
+    /*min-height: 320px;*/
+    margin: 0 5% 70px;
+    display: block;
+    padding: 0 15px;
+    text-align: center;
+}
+
+.section [class*="col-"] .title-area {
+    padding: 0;
+}
+
+.section .title-area .description {
+    font-size: 18px;
+    color: #FFFFFF;
+}
+
+.separator {
+    color: #ffffff;
+    margin: 0 auto 20px;
+    max-width: 240px;
+    text-align: center;
+    position: relative;
+}
+.separator:before, .separator:after {
+    display: block;
+    width: 40%;
+    content: " ";
+    margin-top: 10px;
+    border: 1px solid #ffffff;
+}
+.separator:before {
+    float: left;
+}
+.separator:after {
+    float: right;
+}
+
+.btn,
+.navbar .navbar-nav > li > a.btn {
+    /*border-width: 1px;*/
+    background-color: #FFFFFF;
+    font-weight: 300;
+    border-radius: 5px;
+    font-size: 18px;
+    line-height: 1.2em;
+    /*opacity: 0.8;*/
+    /*filter: alpha(opacity=80);*/
+    padding: 10px 15px;
+    /*border-color: #888888;*/
+    color: #000000;
+    /*text-transform: uppercase;*/
+    box-shadow: 2px 2px 5px 0px rgba(0, 0, 0, 0.5);
+}
+
+.btn:hover, .btn:focus, .btn:active, .btn.active, .open > .btn.dropdown-toggle,
+.navbar .navbar-nav > li > a.btn:hover,
+.navbar .navbar-nav > li > a.btn:focus,
+.navbar .navbar-nav > li > a.btn:active,
+.navbar .navbar-nav > li > a.btn.active, .open >
+.navbar .navbar-nav > li > a.btn.dropdown-toggle {
+    background-color: transparent;
+    color: #000000;
+    border-color: #ffffff;
+}
+.btn:disabled, .btn[disabled], .btn.disabled,
+.navbar .navbar-nav > li > a.btn:disabled,
+.navbar .navbar-nav > li > a.btn[disabled],
+.navbar .navbar-nav > li > a.btn.disabled {
+    background-color: transparent;
+    border-color: #ffffff;
+}
+.btn.btn-fill,
+.navbar .navbar-nav > li > a.btn.btn-fill {
+    color: #000000;
+    background-color: #ffffff;
+    opacity: 1;
+    filter: alpha(opacity=100);
+}
+.btn.btn-fill:hover, .btn.btn-fill:focus, .btn.btn-fill:active, .btn.btn-fill.active, .open > .btn.btn-fill.dropdown-toggle,
+.navbar .navbar-nav > li > a.btn.btn-fill:hover,
+.navbar .navbar-nav > li > a.btn.btn-fill:focus,
+.navbar .navbar-nav > li > a.btn.btn-fill:active,
+.navbar .navbar-nav > li > a.btn.btn-fill.active, .open >
+.navbar .navbar-nav > li > a.btn.btn-fill.dropdown-toggle {
+    background-color: #113441;
+    color: #ffffff;
+    border-color:#113441;
+    /*height:50px;*/
+}
+.btn.btn-fill .caret,
+.navbar .navbar-nav > li > a.btn.btn-fill .caret {
+    border-top-color: #FFFFFF;
+}
+.btn .caret,
+.navbar .navbar-nav > li > a.btn .caret {
+    border-top-color: #FFFF;
+}
+.btn:hover, .btn:focus,
+.navbar .navbar-nav > li > a.btn:hover,
+.navbar .navbar-nav > li > a.btn:focus {
+    opacity: 1;
+    filter: alpha(opacity=100);
+    outline: 0 !important;
+}
+.btn:active, .btn.active, .open > .btn.dropdown-toggle,
+.navbar .navbar-nav > li > a.btn:active,
+.navbar .navbar-nav > li > a.btn.active, .open >
+.navbar .navbar-nav > li > a.btn.dropdown-toggle {
+    -webkit-box-shadow: none;
+    box-shadow: none;
+    outline: 0 !important;
+}
+.btn.btn-icon,
+.navbar .navbar-nav > li > a.btn.btn-icon {
+    padding: 10px;
+}
+
+.headSection {
+    text-align : center;
+    background-color:#ffbb00;
+    height:200px;
+    padding-top : 30px;
+}
+
+@media (max-width: 930px) {
+    .section.section-our-team .title-description,
+    .section.section-we-do .title-description {
+        max-width: 550px;
+        margin: 0 auto;
+    }
+}
+
+.section-our-team .text-area {
+    padding-bottom: 0;
+}
+
+
+.text-area {
+    padding-bottom: 30px;
+}
+
+.section .text-area {
+    padding: 4.375em 0;
+    position: relative;
+    z-index: 3;
+    display: block;
+}
+.section .text-area .description,
+.section .text-area .description p {
+    font-size: 16px;
+    color: #777777;
+}
+
+.card p {
+    min-height: 0;
+}
+
+
+.card {
+    /*background: #fff;*/
+    /*box-shadow: 0 32px 44px -24px rgba(0, 0, 0, 0.23), 0 20px 25px 0px rgba(0, 0, 0, 0.12), 0 15px 10px -10px rgba(0, 0, 0, 0.2);*/
+    /*border-radius: 6px;*/
+    margin-bottom: 30px;
+    -webkit-transition: all 370ms cubic-bezier(0.34, 1.61, 0.7, 1);
+    -moz-transition: all 370ms cubic-bezier(0.34, 1.61, 0.7, 1);
+    -o-transition: all 370ms cubic-bezier(0.34, 1.61, 0.7, 1);
+    -ms-transition: all 370ms cubic-bezier(0.34, 1.61, 0.7, 1);
+    transition: all 370ms cubic-bezier(0.34, 1.61, 0.7, 1);
+}
+
+.card a {
+    opacity: .85;
+}
+
+.card:hover .header {
+    opacity: 1;
+}
+.card h2 {
+    margin-top: 0;
+}
+.card img {
+    max-width: 100%;
+}
+.card .header img {
+    border-radius: 4px;
+}
+.card .image-header,
+.card .header img {
+    width: 100%;
+    border-radius: 4px 4px 0 0;
+}
+.card .image-header.image-full,
+.card .header img.image-full {
+    border-radius: 4px;
+}
+.card .row .image-header,
+.card .row .header img {
+    width: 100%;
+    border-radius: 4px;
+}
+.card .btn {
+    margin-top: 15px;
+}
+.card > img {
+    border-radius: 4px;
+}
+.card .title {
+    margin-bottom: 5px;
+    color: #333333;
+}
+.card .description {
+    font-size: 13px;
+}
+
+
+.card-member {
+    display: block;
+    text-align: center;
+    margin-bottom: 20px;
+}
+.card-member .content {
+    padding: 25px;
+    /*border: 2px solid rgba(17, 52, 65, .4);*/
+    border-radius: 8px;
+    margin-right: 15px;
+    margin-left: 15px;
+    background-color:#113441;
+    color:#FFFFFF;
+
+}
+.card-member > img {
+    background: none repeat scroll 0 0 transparent;
+    height: auto;
+    width: 120px;
+    margin: 0 auto;
+}
+
+
+.card-plain {
+    border-radius: 0;
+    box-shadow: none;
+    background: none;
+}
+.card-plain .image-header {
+    border-radius: 4px;
+}
+
+.card:not(.card-plain):not(.card-price):hover {
+    -webkit-transform: scale(1.03);
+    -moz-transform: scale(1.03);
+    -o-transform: scale(1.03);
+    -ms-transform: scale(1.03);
+    transform: scale(1.03);
+    /*box-shadow: 0 26px 50px -10px rgba(0, 0, 0, 0.38), 0 10px 20px 0px rgba(0, 0, 0, 0.2), 0 15px 10px -10px rgba(0, 0, 0, 0.2);*/
+}
+.card .subtitle-black {
+    color: #141414;
+}
+
+.avatar {
+    border: 3px solid #c5a47e;
+    border-radius: 50%;
+    overflow: hidden;
+    max-width: 110px;
+    margin: 0 auto;
+}
+.avatar img {
+    width: 100%;
+    height: auto;
+}
+
+.avatar-danger {
+    border-color: #113441;
+}
+
+.img-circle.img-profile {
+    width: 120px;
+    height: 120px;
+}
+
+p.description {
+    font-size: 16px;
+    color: #777777;
+}
+
+a:hover, a:focus {
+    text-decoration: none;
+}
+
+.description {
+    margin-bottom: 50px;
+}
+
+.big-text {
+    font-size: 18px;
+    line-height: 25px;
+    font-weight: 600;
+    text-transform: uppercase;
+    margin-bottom: 0;
+    margin-top: 0;
+    /*color: #113441;*/
+}
+
+.small-text {
+    color: #ffffff;
+    text-align: center;
+}
+
+.card-member .content {
+    height: 400px;
+    margin-left:auto;
+    margin-right:auto;
+}
+
+@media (max-width: 1200px) {
+    .card-member .content {
+        width: 260px;
+    }
+}
+
+.yellowBlock {
+    background-color: #ffbb00;
+    color: #FFFFFF;
+    padding-bottom : 70px;
+    padding-top:0px;
+    text-align:center;
+}
+
+.yellowBlock p {
+    color: #FFFFFF;
+}
+
+.yellowBlock h2 {
+    color: #FFFFFF;
+}
+
+.whiteBlock {
+    background-color: #FFFFFF;
+    color: #113441;
+;
+    padding-bottom : 70px;
+}
+
+
+.beigeBlock {
+    background-color: #fbf3de;
+    color: #113441;
+    padding-bottom : 70px;
+
+}
+
+.beigeBlock h2 {
+    color: #113441;
+}
+
+.blueBlock {
+    background-color: #113441;
+    color: #FFFFFF;
+    padding-bottom:70px;
+}
+
+.greyBlock {
+    background-color: #949494;
+    color: #FFFFFF;
+}
+
+.flip-container {
+    margin-left:auto;
+    margin-right:auto;
+}
+
+.imgService {
+    margin-bottom : 30px;
+}
+
+.generalSpeBlock {
+    font-size:22px;
+}
+
+
+.market, .dev, .design, .audit {
+    background-color:#113441;
+    /*z-index:1;*/
+    /*-webkit-mask-position-x: 0;*/
+    /*-webkit-mask-position-y: 0;*/
+    /*min-height:40px;*/
+    /*min-width:40px;*/
+
+    opacity:0;
+    width: 1px;
+     height: 1px;
+    font-size:2px;
+    text-align:left;
+    /*background: red;*/
+     -webkit-transition: width 1s, height 1s, -webkit-transform 1s; /* Safari */
+     transition: width 1s, height 1s, min-height 1s, min-width 1s, font-size 1s, transform 1s;
+    /*margin-bottom: 50px;*/
+    /*padding: 40px;*/
+
+}
+
+.market h2, .dev h2, .design h2, .audit h2 {
+    font-size:2px;
+    color: #ffffff;
+    margin-bottom: 0;
+    -webkit-transition: font-size 1s, -webkit-transform 1s; /* Safari */
+    transition: font-size 1s, transform 1s;
+
+
+}
+.markImg, .devImg, .designImg, .auditImg {
+    width: 1px;
+    height: 1px;
+    opacity:0;
+    visibility:hidden;
+
+    -webkit-transition: width 1s, height 1s, margin-bottom 1s, -webkit-transform 1s; /* Safari */
+    transition: visibility 1s, width 1s, height 1s, margin-bottom 1s, transform 1s;
+    /*transition-delay:0.3s;*/
+    transition-delay: 1s;
 
 }
 
 
-.commentResponseTrash, .commentResponseUpdate, .commentResponseVisibility.glyphicon-eye-open {
-    padding : 5px;
-    background-color : dimgray;
-    color : white;
-    border-radius : 2px;
+.speDisplay {
+    width: 100%;
+    height: 100%;
+    min-height:400px;
+    min-width:400px;
+    font-size:22px;
+    opacity:10;
+    margin-bottom: 30px;
 
+    /*-webkit-transform: rotate(180deg); !* Safari *!*/
+    /*transform: rotate(180deg);*/
 }
 
+.speDisplay h2 {
 
-.commentResponseVisibility.glyphicon-eye-close {
-    padding : 5px;
-    background-color : #9db3f5;
-    color : #333377;
-    border-radius : 2px;
+    font-size:40px;
+    /*-webkit-transform: rotate(180deg); !* Safari *!*/
+    /*transform: rotate(180deg);*/
 }
 
+.speImgDisplay {
+    width: 290px;
+    height: 496px;
+    opacity:100;
+    visibility:visible;
 
-.commentVisibility.glyphicon-eye-close {
-    padding : 5px;
-    background-color : #9db3f5;
-    color : #333377;
-    border-radius : 2px;
+
+    /*-webkit-transform: rotate(180deg); !* Safari *!*/
+    /*transform: rotate(180deg);*/
 }
 
-
-
-li {
-    padding : 0px;
+.hide {
+    visibility:hidden;
 }
 
-.content {
-    padding-top : 100px;
+.speClose {
+    text-align:right;
+    padding-right:20px;
+    padding-top:20px;
+    right:40px;
+    color:#FFFFFF;
+    position:absolute;
 }
+
+.speClose a {
+    font-size:30px;
+    z-index: 15;
+}
+
+/*--------------------------- Slider ---------------------------------------*/
+
+.carousel-indicators {
+    position: absolute;
+    bottom: 10px;
+    left: 50%;
+    z-index: 15;
+    width: 60%;
+    padding-left: 0;
+    margin-left: -30%;
+    text-align: center;
+    list-style: none;
+}
+.carousel-indicators li {
+    display: inline-block;
+    width: 14px;
+    height: 14px;
+    margin-left: 20px;
+    margin-right: 20px;
+    /*margin: 1px;*/
+    text-indent: -999px;
+    cursor: pointer;
+    background-color: #000 \9;
+    background-color: rgba(0, 0, 0, 0);
+    border: 1px solid #fff;
+    border-radius: 10px;
+}
+.carousel-indicators .active {
+    width: 14px;
+    height: 14px;
+    margin-left: 20px;
+    margin-right: 20px;
+    background-color: #fff;
+}
+
+.carousel-caption h3 {
+    color:#ffffff;
+}
+
+.carousel-caption p {
+    color:#ffffff;
+}
+/* darken the control area */
+
+/*.carousel .carousel-control {*/
+    /*opacity: 1*/
+/*}*/
+/*.carousel .carousel-control.left {*/
+    /*background-image: linear-gradient(to right, rgb(0, 0, 0) 0, rgba(0, 0, 0, 0) 100%);*/
+/*}*/
+/*.carousel .carousel-control.right {*/
+    /*background-image: linear-gradient(to right, rgba(0, 0, 0, 0) 0, rgb(0, 0, 0) 100%);*/
+/*}*/
+
+
+/*!* add darkness over the image *!*/
+/*.item {*/
+    /*position: relative*/
+/*}*/
+/*.item:before {*/
+    /*content: '';*/
+    /*background: rgba(0, 0, 0, 0.2);*/
+    /*!* change this value from 0.1 to 1; *!*/
+    /*width: 100%;*/
+    /*height: 100%;*/
+    /*display: block;*/
+    /*position: absolute;*/
+    /*left: 0;*/
+    /*top: 0;*/
+    /*width: 100%;*/
+    /*height: 100%;*/
+    /*z-index: 5;*/
+/*}*/
+/*--------------------------------------------------------------------------*/
+/*#myCarousel {*/
+/*background-image:*/
+        /*linear-gradient(to right,rgba(0,0,0,0) 0,rgba(0,0,0,0) 100%);*/
+/*}*/
+
+/*#myCarousel span {*/
+    /*background-image:*/
+            /*linear-gradient(to right,rgba(0,0,0,0) 0,rgba(0,0,0,0) 100%);*/
+/*}*/
+
+/*#myCarousel a{*/
+    /*background-image:*/
+            /*linear-gradient(to right,rgba(0,0,0,0) 0,rgba(0,0,0,0) 100%);*/
+/*}*/
+
+/*#myCarousel div{*/
+    /*background-image:*/
+            /*linear-gradient(to right,rgba(0,0,0,0) 0,rgba(0,0,0,0) 100%);*/
+/*}*/
+
+/*#myCarousel p {*/
+    /*background-image:*/
+            /*linear-gradient(to right,rgba(0,0,0,0) 0,rgba(0,0,0,0) 100%);*/
+/*}*/
+
+/*.carousel-control {*/
+    /*background-image:*/
+            /*linear-gradient(to right,rgba(0,0,0,0) 0,rgba(0,0,0,0) 100%);*/
+/*}*/
+
+/*.carousel-control.left {*/
+    /*background-image:*/
+            /*linear-gradient(to right,rgba(0,0,0,0) 0,rgba(0,0,0,0) 100%);*/
+/*}*/
