--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -10,9 +10,33 @@
 
     {% block stylesheets %}
 
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+        <meta charset="utf-8" />
+        <link rel="apple-touch-icon" sizes="76x76" href="../assets/img/apple-icon.png">
+        <link rel="icon" type="image/png" sizes="96x96" href="../assets/img/favicon.png">
 
+        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+        {#<title>About Us | Gaia - Bootstrap Template</title>#}
+        <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' />
+        {#<link href="../assets/css/bootstrap.css" rel="stylesheet" />#}
+        {#<link href="../assets/css/material-dashboard.css" rel="stylesheet"/>#}
+        {#<link href="../assets/css/owl.css" rel="stylesheet"/>#}
+        <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet" />
+
+        {#<!--     Fonts and icons     -->#}
+        {#<link href='https://fonts.googleapis.com/css?family=Cambo|Lato:400,700' rel='stylesheet' type='text/css'>#}
+        {#<link href="http://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css" rel="stylesheet">#}
+        {#<link href="../assets/css/fonts/pe-icon-7-stroke.css" rel="stylesheet">#}
+        {#<link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Roboto+Slab:400,700|Material+Icons" />#}
+        <link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet">
+        {#<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">#}
+        <link rel="stylesheet" type="text/css" href="{{ asset('bundles/bmatznerfontawesome/css/font-awesome.min.css') }}" />
+        <link href="{{ asset('assets/pe-icon-7-stroke.css') }}" rel="stylesheet" />
+        <link href="{{ asset('assets/css/gaia.css') }}" rel="stylesheet" />
+        {#<link href="{{ asset('assets/css/material-dashboard.css') }}" rel="stylesheet" />#}
+        <link href="{{ asset('assets/css/menu.css') }}" rel="stylesheet" />
+        {#<link href="{{ asset('assets/css/anim.css') }}" rel="stylesheet" />#}
         <link href="{{ asset('assets/css/owl.css') }}" rel="stylesheet" />
+        {#<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">#}
 
     {% endblock %}
 
@@ -22,21 +46,52 @@
 
 <div>
     {% block sidebar %}
-        <nav class="navbar navbar-default">
-            <div class="container-fluid">
-                <div class="navbar-header">
-                    <a class="navbar-brand" href="#">Le Hibou qui Geek</a>
-                </div>
-                <ul class="nav navbar-nav">
-                    <li class="active"><a href="#">Accueil</a></li>
-                    <li><a href={{ path('articleFormDisplay') }}>Création article</a></li>
-                    <li><a href="{{ path('articleAdmin') }}">Administration article</a></li>
+
+        <div class="menuCircle">
+            <div class="hamburger">
+                <span></span>
+            </div>
+
+            <div class="owlMenu">
+                <ul>
+                    <li><a href={{ path('index') }}>L'agence</a></li>
+                    <li><a href={{ path('owlServicesDisplay') }}>Notre savoir-faire</a></li>
+                    <li><a href={{ path('owlReferencesDisplay') }}>Nos références</a></li>
+                    <li><a href={{ path('owlContactDisplay') }}>Nous contacter</a></li>
+                    <li><a href={{ path('owlBlogDisplay') }}>Blog</a></li>
+
                 </ul>
             </div>
-        </nav>
+
+        </div>
+
+
+
+                </div>
+            </div>
+        </div>
+
+    {% endblock %}
+
+    {% block logo %}
+
+    <div class="headSection">
+
+        <div>
+            {#<div class="container">#}
+                <div class="content yellowBlock" style="text-align:left; margin-left:50px;">
+
+                    <div>
+                        <img alt="..." src="../assets/img/logoJaune.png" style="width:140px;height:140px"/>
+                    </div>
+
+                </div>
+            </div>
+        {#</div>#}
 
     {% endblock %}
 </div>
+
 
 <div class="content">
 
@@ -50,13 +105,29 @@
 
     {% block footer %}
 
-        <footer class="page-footer font-small blue">
+        <footer class="footer footer-big footer-color-black greyBlock" data-color="black">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-2 col-sm-3">
 
-            <!-- Copyright -->
-            <div class="footer-copyright footer text-center py-3">© 2018 helvie.fr</div>
-            <!-- Copyright -->
+                    </div>
+                    <div class="col-md-3 col-md-offset-1 col-sm-3">
 
-        </footer>    {#</div>#}
+                    </div>
+                    <div class="col-md-3 col-sm-3">
+                    </div>
+                    <div class="col-md-2 col-md-offset-1 col-sm-3">
+                    </div>
+                </div>
+                <hr>
+                <div class="copyright">
+                    ©
+                    <script>
+                        document.write(new Date().getFullYear())
+                    </script> Creative Tim, made with love
+                </div>
+            </div>
+        </footer>
 
     {% endblock %}
 </div>
@@ -67,9 +138,20 @@
 
 {% block javascripts %}
 
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.js"></script>
-    <script src="https://cdn.ckeditor.com/ckeditor5/1...nt/ckeditor.js"></script>
-    <script src="[ckeditor-build-path]/ckeditor.js"></script>
+    {#<script src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.js"></script>#}
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
+
+
+
+    {#<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>#}
+    {#<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>#}
+    {#<script src="https://cdn.ckeditor.com/ckeditor5/1...nt/ckeditor.js"></script>#}
+    {#<script src="[ckeditor-build-path]/ckeditor.js"></script>#}
+    {#<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>#}
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+    <script src="{{ asset('assets/js/anim.js') }}"></script>
+
 
 {% endblock %}
 
