--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -18,23 +18,23 @@
         {#<title>About Us | Gaia - Bootstrap Template</title>#}
         <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' />
         {#<link href="../assets/css/bootstrap.css" rel="stylesheet" />#}
-        {#<link href="../assets/css/material-dashboard.css" rel="stylesheet"/>#}
         {#<link href="../assets/css/owl.css" rel="stylesheet"/>#}
         <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet" />
 
         {#<!--     Fonts and icons     -->#}
         {#<link href='https://fonts.googleapis.com/css?family=Cambo|Lato:400,700' rel='stylesheet' type='text/css'>#}
         {#<link href="http://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css" rel="stylesheet">#}
-        {#<link href="../assets/css/fonts/pe-icon-7-stroke.css" rel="stylesheet">#}
-        {#<link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Roboto+Slab:400,700|Material+Icons" />#}
+        <link href="../assets/css/fonts/pe-icon-7-stroke.css" rel="stylesheet">
+        <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Roboto+Slab:400,700|Material+Icons" />
         <link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet">
         {#<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">#}
         <link rel="stylesheet" type="text/css" href="{{ asset('bundles/bmatznerfontawesome/css/font-awesome.min.css') }}" />
         <link href="{{ asset('assets/pe-icon-7-stroke.css') }}" rel="stylesheet" />
         <link href="{{ asset('assets/css/gaia.css') }}" rel="stylesheet" />
-        {#<link href="{{ asset('assets/css/material-dashboard.css') }}" rel="stylesheet" />#}
+
+        <link href="{{ asset('assets/css/material-dashboard.css') }}" rel="stylesheet" />
         <link href="{{ asset('assets/css/menu.css') }}" rel="stylesheet" />
-        {#<link href="{{ asset('assets/css/anim.css') }}" rel="stylesheet" />#}
+        <link href="{{ asset('assets/css/anim.css') }}" rel="stylesheet" />
         <link href="{{ asset('assets/css/owl.css') }}" rel="stylesheet" />
         {#<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">#}
 
@@ -44,7 +44,6 @@
 
 <body>
 
-<div>
     {% block sidebar %}
 
         <div class="menuCircle">
@@ -88,9 +87,9 @@
                 </div>
             </div>
         {#</div>#}
-
+    </div>
     {% endblock %}
-</div>
+
 
 
 <div class="content">
@@ -98,7 +97,7 @@
         {% block content %}
 
         {% endblock %}
-
+</div>
 
 
 <div style="clear:both">
@@ -131,7 +130,7 @@
 
     {% endblock %}
 </div>
-</div>
+
 
 
 
