gestion formulaire et tables commencée

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -148,8 +148,15 @@
     {#<script src="https://cdn.ckeditor.com/ckeditor5/1...nt/ckeditor.js"></script>#}
     {#<script src="[ckeditor-build-path]/ckeditor.js"></script>#}
     {#<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>#}
+    <!--	Plugin for Select, full documentation here: http://silviomoreto.github.io/bootstrap-select -->
+    {#<script src="../../assets/js/plugins/bootstrap-selectpicker.js"></script>#}
+    <!--  Plugin for the DateTimePicker, full documentation here: https://eonasdan.github.io/bootstrap-datetimepicker/ -->
+    {#<script src="../../assets/js/plugins/bootstrap-datetimepicker.min.js"></script>#}
+    {#<script src="../../assets/js/plugins/moment.min.js"></script>#}
+
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
     <script src="{{ asset('assets/js/anim.js') }}"></script>
+
 
 
 {% endblock %}
