--- a/public/assets/css/owl.css
+++ b/public/assets/css/owl.css
@@ -1195,3 +1195,19 @@ input.form-control::placeholder {
 #prospect_information_respCivility {
     background-image: none;
 }
+
+.menuSelect {
+    font-size : 18px;
+    color : #999;
+    margin-bottom:10px;
+    height: 35px;
+    /*position: absolute;*/
+    top: 0;
+    padding-top: 0;
+    margin-top: 35px;
+}
+
+.option {
+    color : #999;
+
+}
